--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="hero-content">
       <h2>Gestiona tu facturación y administración de forma sencilla</h2>
       <p>Con jocarsa | rosybrown, disfruta de una solución integral para emitir facturas, gestionar clientes, productos y gastos, además de generar informes detallados.</p>
-      <a href="index.php" class="cta">Empieza ahora</a>
+      <a href="mailto:info@jocarsa.com" class="cta">Empieza ahora</a>
     </div>
   </section>
   
