--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <p>&copy; 2025 jocarsa | rosybrown. Todos los derechos reservados.</p>
     <p>Contacto: <a href="mailto:soporte@jocarsa.com">info@jocarsa.com</a></p>
   </footer>
+  <script src="https://ghostwhite.jocarsa.com/analytics.js?user=rosybrown.jocarsa.com"></script>
 </body>
 </html>
 
